@@ -1,0 +1,9 @@
+MD5 0c75605a6d28d3b60241eb3b78e82467 upx-3.00-amd64_linux.tar.bz2 367673
+RMD160 77e15a7debdc9112b7209d8baf7fc1424ee7941d upx-3.00-amd64_linux.tar.bz2 367673
+SHA256 74e0983d9dca869b31b308b7bd407faaa7aace2effd7b34d86a60b2bf16297b0 upx-3.00-amd64_linux.tar.bz2 367673
+MD5 5062485eb5f63d3a50637a3ad5685b01 upx-3.00-i386_linux.tar.bz2 351294
+RMD160 cfffa18d4f40410dfd65adf352e1ea94828f9437 upx-3.00-i386_linux.tar.bz2 351294
+SHA256 698ad4b95258774717f8983ec504d56b1c4714e2e40df7cb1c62b1f88c2dafe8 upx-3.00-i386_linux.tar.bz2 351294
+MD5 a9fdc50485630686a98818a8f788c2f5 upx-3.00-powerpc_linux.tar.bz2 512499
+RMD160 85d8713f7b42d275efe4246cfc3df236b2b97bd5 upx-3.00-powerpc_linux.tar.bz2 512499
+SHA256 2ede64715a20625d431243565e3983f4571cd4c2b169a299b503a98e5047dd76 upx-3.00-powerpc_linux.tar.bz2 512499
